# regeneracao

./: .env.example  README.md  analise.xlsx  extrator.py  index.html  pyproject.toml
.github/workflows/: main.yml
analise/: 01.json  02.json  03.json  04.json  05.json  06.json  07.json  08.json  09.json  10.json
areas/00/: 00-20260101.dbf  00-20260101.shx
areas/01/: 01-20260101.shp
areas/02/: 02-20250101.dbf  02-20250101.shp  02-20250101.shx
areas/03/: 03-20260101.dbf  03-20260101.shp  03-20260101.shx
areas/04/: 04-20260101.dbf  04-20260101.shp  04-20260101.shx
areas/05/: 05-20260101.dbf  05-20260101.shp  05-20260101.shx
areas/06/: 06-20260101.dbf  06-20260101.shp  06-20260101.shx
areas/07/: 07-20260101.dbf  07-20260101.shp  07-20260101.shx
areas/08/: 08-20260101.dbf  08-20260101.shp  08-20260101.shx
areas/09/: 09-20260101.dbf  09-20260101.qmd  09-20260101.shp  09-20260101.shx
areas/10/: 10-20260101.dbf  10-20260101.shp  10-20260101.shx
